# gnomes-lab

./: .gitignore  CLAUDE.md  README.md  config.py  conversion.py  main.py  pyproject.toml  ui.py  utils.py
gnomes_village/: mama_gnome.py  papa_gnome.py  small_gnomes.py
toolz/: tool_registry.py  tools.py
